add nexus update key, use semantic versioning

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,11 @@
 {
-
-  "Name": "Gaveliere's Furry Mod",
-   "Author": "Krystedez",
-   "Description": "Art by Gaveliere. Overwrites every NPC sprite, portrait and event sprites, effectively transforming everyone into anthropormorphic animal characters.",
-   "Version": "1.0.0",
-   "UniqueID": "Krystedez.GavelieresFurryMod",
-   "ContentPackFor": 
-   {
-       "UniqueID": "Pathoschild.ContentPatcher"
-   },
-   "UpdateKeys": [ "" ],
-   
+	"Name": "Gaveliere's Furry Mod",
+	"Author": "Krystedez",
+	"Description": "Art by Gaveliere. Overwrites every NPC sprite, portrait and event sprites, effectively transforming everyone into anthropomorphic animal characters.",
+	"Version": "5.22.0",
+	"UniqueID": "Krystedez.GavelieresFurryMod",
+	"ContentPackFor": {
+		"UniqueID": "Pathoschild.ContentPatcher"
+	},
+	"UpdateKeys": [ "Nexus:1083" ]
 }
