update to match original version 6.0.4

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
-	"Name": "Gaveliere's Furry Mod",
-	"Author": "Krystedez",
-	"Description": "Art by Gaveliere. Overwrites every NPC sprite, portrait and event sprites, effectively transforming everyone into anthropomorphic animal characters.",
-	"Version": "5.22.0",
-	"UniqueID": "Krystedez.GavelieresFurryMod",
+
+	"Name": "Anthro Characters Continued",
+	"Author": "Gaveliere (Twitter: @Gavelly) Blanchard a.k.a sion9000 (Twitter: @NekoBlanchard) Krystedez (Twitter: @ChiefKryz)",
+	"Description": "Overwrites every NPC sprite, portrait and event sprites, effectively transforming everyone into anthropormorphic animal characters. Art by Gav!",
+	"Version": "6.0.4",
+	"UniqueID": "sion9000.AnthroCharactersContinued",
 	"ContentPackFor": {
-		"UniqueID": "Pathoschild.ContentPatcher"
+		"UniqueID": "Pathoschild.ContentPatcher",
+		"MinimumVersion": "1.17.1"
 	},
 	"UpdateKeys": [ "Nexus:1083" ]
-}
+ }
